--- a/style_sheet.css
+++ b/style_sheet.css
@@ -183,7 +183,7 @@
     transform: translateY(-3px); /* Hover effect on icon too */
   }
 
-   social_media p {
+   .social_media p {
     font-size: larger;
     text-transform: capitalize;
   }
